# robotframework-appium-smartlocator

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  release_version.py  teste.py  teste.robot
.github/workflows/: release.yml
appium_smartlocator/: AppiumSmartLocator.py  __init__.py  element_resolver.py  locator_builder.py  semantic_parser.py  smart_element_resolver.py  smart_robot_library.py
results/: log.html  output.xml  report.html
